@@ -1,3 +1,11 @@
+2014-10-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* paths.c: Fixed a bug introduced by the previous "Bug fix".
+
+	* tests/lmmath.test: Shell script ...
+	* tests/lmmi12.600pk: ... and data for a new test.
+	* Makefile.am, configure.ac: Add the new test.
+
 2014-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* paths.c: Bug fix: Avoid use of uninitialized variable.
